python hates hyphens

--- a/brev.yml
+++ b/brev.yml
@@ -2,11 +2,11 @@ version: '2021.03.1'
 services:
   - name: 'hello-python-a'
     runtime: 'python3'
-    handler: 'main-a.handler'
+    handler: 'maina.handler'
     type: 'http'
   - name: 'hello-python-b'
     runtime: 'python3'
-    handler: 'main-b.handler'
+    handler: 'mainb.handler'
     type: 'http'
   - name: 'hello-node-a'
     runtime: 'nodejs14'
