--- a/brev.yml
+++ b/brev.yml
@@ -1,14 +1,10 @@
 version: '2021.03.1'
 services:
-  - name: 'hello-python-a'
+  - name: 'foopython'
     runtime: 'python3'
     handler: 'maina.handler'
     type: 'http'
-  - name: 'hello-python-b'
-    runtime: 'python3'
-    handler: 'mainb.handler'
-    type: 'http'
-  - name: 'hello-node-a'
+  - name: 'foonode'
     runtime: 'nodejs14'
     handler: 'index.handler'
     type: 'http'
