set to two services

--- a/brev.yml
+++ b/brev.yml
@@ -1,14 +1,10 @@
 version: '2021.03.1'
 services:
-  - name: 'foopython'
+  - name: 'alpha'
     runtime: 'python3'
     handler: 'maina.handler'
     type: 'http'
-  - name: 'barpython'
-    runtime: 'python3'
-    handler: 'mainb.handler'
-    type: 'http'
-  - name: 'foonode'
+  - name: 'beta'
     runtime: 'nodejs14'
     handler: 'index.handler'
     type: 'http'
