reset to linked services

--- a/brev.yml
+++ b/brev.yml
@@ -1,10 +1,14 @@
 version: '2021.03.1'
 services:
-  - name: 'alpha'
+  - name: 'foopython'
     runtime: 'python3'
     handler: 'maina.handler'
     type: 'http'
-  - name: 'beta'
+  - name: 'barpython'
+    runtime: 'python3'
+    handler: 'mainb.handler'
+    type: 'http'
+  - name: 'foonode'
     runtime: 'nodejs14'
     handler: 'index.handler'
     type: 'http'
