--- a/brev.yml
+++ b/brev.yml
@@ -4,11 +4,6 @@ services:
     runtime: 'python3'
     handler: 'maina.handler'
     type: 'http'
-  - name: 'barpython'
-    runtime: 'python3'
-    handler: 'mainb.handler'
-    type: 'http'
-  - name: 'foonode'
-    runtime: 'nodejs14'
-    handler: 'index.handler'
-    type: 'http'
+databases:
+  - name: 'foo'
+    engine: 'mysql'
