--- a/brev.yml
+++ b/brev.yml
@@ -1,6 +1,7 @@
 version: '2021.03.1'
 services:
   - name: 'foopython'
+    public: true
     runtime: 'python3'
     handler: 'maina.handler'
     type: 'http'
